# weathery

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: animate.rs  image_fetch.rs  main.rs  weather.rs
