[package]
name = "weathery"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["VG-dev1 <vitohackergrgic@gmail.com>"]
description = "A terminal weather app with animated cityscapes"
keywords = ["cli", "command-line", "weather", "ascii"]
categories = ["command-line-utilities"]

[[bin]]
name = "weathery"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"